Fixed floater data alignment

--- a/src/css/ghierarchy.less
+++ b/src/css/ghierarchy.less
@@ -45,6 +45,10 @@ div.gHEditor {
 	> table {
 		margin: 10px;
 
+		th, td {
+			text-align: left;
+		}
+
 		th {
 			text-align: left;
 		}
